@@ -2,4 +2,4 @@ SUBDIRS = po src
 
 ACLOCAL_AMFLAGS = -I config/m4
 
-EXTRA_DIST = config/m4/ChangeLog config/config.rpath config/mkinstalldirs
+EXTRA_DIST = config/config.rpath  config/m4/ChangeLog config/config.rpath config/mkinstalldirs
